# scratch

./: .gitattributes  .gitignore  LICENSE  README.md  test.jsl
buildtest/: .hashes  justfile  makefile
castl/: test.js
d/: cstr.d
d/bcruntime/: justfile
d/bcruntime/src/: main.d
d/dlikec/: .gitignore
d/dlikec/src/: app.d
d/tch/: .gitignore  dub.sdl  justfile
d/tch/src/: app.d
d/tch/src/api/: board.d  package.d  post.d  thread.d  writer.d
d/tch/src/api/provider/: _4chan.d  iapi.d  package.d
dart/dartjs/: .gitignore  index.html
dart/dartjs/css/: index.css
dart/dartjs/js/: index.js
dart/dartjs/src/: index.dart
dartjs/: justfile  pubspec.yaml
dartjs/.dart_tool/: package_config.json
dartjs/js/: index.js.deps  index.js.map
dlikec/: dub.sdl  justfile
docs/: README.md
fusion/: justfile
fusion/src/: main.fu
haxe/: build.hxml  justfile
haxe/src/: Main.hx
haxe/src/std/: Io.hx
js/shelljs/: test.js
js2lua/: package-lock.json  test.lua
just/buildtest/: ideas
lua/: test.lua
lua/castl/: justfile  test.lua
lua/js2lua/: justfile  test.js
misc/: test.fasm
temp/: justfile
vala/: .gitignore  justfile  meson.build  test.lua  xmake.lua
vala/src/: main.vala  templ.vala
vala/src/other/: myc.c  test.vala
vox/: justfile
vox/src/: main.vx  stdio.vx
zscript/: zscript.zs
